--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "comment"
   ],
   "devDependencies": {
-    "@rollup/plugin-typescript": "^5.0.2",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.7.0",
@@ -47,7 +47,7 @@
     "rollup-plugin-terser": "^7.0.0",
     "tslib": "^2.0.1",
     "typedoc": "^0.18.0",
-    "typescript": "^4.0.2"
+    "typescript": "4.0.2"
   },
   "dependencies": {
     "@types/resize-observer-browser": "^0.1.4"
